--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --color-dark-cyan: hsl(158, 36%, 37%);
+  --color-darker-cyan: hsl(161, 34%, 20%);
   --color-cream: hsl(30, 38%, 92%);
   --color-dark-blue: hsl(212, 21%, 14%);
   --color-grayish-blue: hsl(228, 12%, 48%);
@@ -25,29 +26,47 @@ body {
 }
 
 .container {
-  height: 95vh;
-  min-height: 50rem;
+  min-height: 95vh;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    height: auto;
+  }
 }
 
 /****************Card****************/
 .card {
   width: 60rem;
-  height: 45rem;
+  min-height: 45rem;
   background-color: #fff;
   border-radius: 1rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+@media only screen and (max-width: 768px) {
+  .card {
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 2fr;
+    margin: 2rem;
+  }
 }
 .card__product-image {
-  flex: 0 0 50%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url("/images/image-product-desktop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+@media only screen and (max-width: 768px) {
+  .card__product-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url("/images/image-product-mobile.jpg");
+    border-radius: 1rem 1rem 0 0;
+  }
 }
 .card__product-details {
-  flex: 1;
   padding: 3.2rem;
 }
 .card__product-category {
@@ -65,6 +84,11 @@ body {
   color: var(--color-dark-blue);
   margin-bottom: 2.5rem;
 }
+@media only screen and (max-width: 768px) {
+  .card__product-name {
+    font-size: 3rem;
+  }
+}
 .card__product-description {
   line-height: 1.6;
   margin-bottom: 2.8rem;
@@ -81,11 +105,16 @@ body {
   color: var(--color-dark-cyan);
   margin-right: 2rem;
 }
+@media only screen and (max-width: 768px) {
+  .card__sale-price {
+    font-size: 3rem;
+  }
+}
 .card__regular-price {
   font-size: 1.3rem;
   text-decoration: line-through;
 }
-.card__button {
+.card__button:link, .card__button:visited {
   display: block;
   background-color: var(--color-dark-cyan);
   border-radius: 0.8rem;
@@ -98,6 +127,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+.card__button:active {
+  background-color: var(--color-darker-cyan);
+}
+.card__button:hover {
+  opacity: 0.9;
+}
 .card__button-icon {
   width: 1.5rem;
   height: 1.5rem;
@@ -108,6 +143,7 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin: 1rem;
 }
 
 .attribution a {
