--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,6 @@
 :root {
   --color-dark-cyan: hsl(158, 36%, 37%);
+  --color-darker-cyan: hsl(161, 34%, 20%);
   --color-cream: hsl(30, 38%, 92%);
   --color-dark-blue: hsl(212, 21%, 14%);
   --color-grayish-blue: hsl(228, 12%, 48%);
@@ -25,9 +26,15 @@ body  {
 }
 
 .container {
-  height: 95vh;
-  min-height: 50rem;
+  min-height: 95vh;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media only screen and (max-width: 768px) {
+    & {
+      height: auto;
+   }
+  }
 }
