--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ body {
   letter-spacing: 0.5rem;
   font-weight: 100;
   text-transform: uppercase;
-  margin-bottom: 2rem;
 }
 .card__product-name {
   font-size: 3.2rem;
@@ -77,11 +76,11 @@ body {
   font-weight: 700;
   line-height: 1;
   color: var(--color-dark-blue);
-  margin-bottom: 2.5rem;
+  margin: 2rem 0 2.5rem 0;
 }
 @media only screen and (max-width: 768px) {
   .card__product-name {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 }
 .card__product-description {
@@ -102,7 +101,7 @@ body {
 }
 @media only screen and (max-width: 768px) {
   .card__sale-price {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 }
 .card__regular-price {
