--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -39,7 +39,6 @@
     letter-spacing: 0.5rem;
     font-weight: 100;
     text-transform: uppercase;
-    margin-bottom: 2rem;
   }
 
   &__product-name {
@@ -48,11 +47,11 @@
     font-weight: 700;
     line-height: 1;
     color: var(--color-dark-blue);
-    margin-bottom: 2.5rem;
+    margin: 2rem 0 2.5rem 0;
 
     @media only screen and (max-width: 768px) {
       & {
-        font-size: 3rem;
+        font-size: 2.8rem;
       }
     }
   }
@@ -77,7 +76,7 @@
 
     @media only screen and (max-width: 768px) {
       & {
-        font-size: 3rem;
+        font-size: 2.8rem;
       }
     }
   }
