--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -8,24 +8,24 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 650px) {
     & {
       grid-template-columns: 100%;
-      grid-template-rows: 1fr 2fr;
+      grid-template-rows: auto auto;
       margin: 2rem;
     }
   }
 
-  &__product-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0,0,0,0)), url('../images/image-product-desktop.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 0.5rem 0 0 0.5rem;
+  &__product-image-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 0.5rem 0 0 0.5rem;
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 650px) {
       & {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0,0,0,0)), url('../images/image-product-mobile.jpg');
         border-radius: 1rem 1rem 0 0;
+        height: auto;
       }
     }
   }
@@ -49,9 +49,10 @@
     color: var(--color-dark-blue);
     margin: 2rem 0 2.5rem 0;
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 650px) {
       & {
         font-size: 2.8rem;
+        margin: 2rem 0;
       }
     }
   }
@@ -59,6 +60,12 @@
   &__product-description {
     line-height: 1.6;
     margin-bottom: 2.8rem;
+
+    @media only screen and (max-width: 650px) {
+      & {
+        margin-bottom: 2.5rem;
+      }
+    }
   }
 
   &__product-price {
@@ -74,7 +81,7 @@
     color: var(--color-dark-cyan);
     margin-right: 2rem;
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 650px) {
       & {
         font-size: 2.8rem;
       }
