--- a/css/style.css
+++ b/css/style.css
@@ -112,17 +112,17 @@ body {
 }
 .card__regular-price {
   font-size: 1.3rem;
-  text-decoration: line-through;
 }
-.card__button:link, .card__button:visited {
-  display: block;
+.card__button {
+  width: 100%;
   background-color: var(--color-dark-cyan);
+  border: none;
   border-radius: 0.8rem;
   padding: 1.5rem 2.5rem;
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 700;
   color: var(--color-white);
-  text-decoration: none;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
