--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -90,19 +90,18 @@
 
   &__regular-price {
     font-size: 1.3rem;
-    text-decoration: line-through;
   }
 
-  &__button:link,
-  &__button:visited {
-    display: block;
+  &__button {
+    width: 100%;
     background-color: var(--color-dark-cyan);
+    border: none;
     border-radius: 0.8rem;
     padding: 1.5rem 2.5rem;
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 700;
     color: var(--color-white);
-    text-decoration: none;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
